# amazon-kinesis-video-streams-producer-c

./: CMakeLists.txt
cmake-scripts/: libcurl-CMakeLists.txt  libmbedtls-CMakeLists.txt
samples/: KvsAacAudioVideoStreamingSample.c  KvsVideoOnlyStreamingSample.c
src/source/: StreamInfoProvider.c
src/source/Common/: AwsV4Signer.c  AwsV4Signer.h
